# scraper-scaffold

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/scraper_scaffold/: __init__.py  __main__.py  cli.py  config.py  generator.py
src/scraper_scaffold/templates/: README.md.tmpl  cache.py.tmpl  env.example.tmpl  export.py.tmpl  fetcher_httpx_async.py.tmpl  fetcher_httpx_sync.py.tmpl  fetcher_playwright_async.py.tmpl  fetcher_playwright_sync.py.tmpl  fetcher_requests.py.tmpl  gitignore.tmpl  logging_setup.py.tmpl  models.py.tmpl  parse_bs4.py.tmpl  parse_parsel.py.tmpl  pkg_init.py.tmpl  pkg_main.py.tmpl  pyproject.toml.tmpl  ratelimit.py.tmpl  requirements.txt.tmpl  robots.py.tmpl  settings.py.tmpl  spider_async.py.tmpl  spider_sync.py.tmpl  test_smoke.py.tmpl
tests/: test_cli.py  test_generator.py
